--- a/frontend/src/components/navbar.css
+++ b/frontend/src/components/navbar.css
@@ -1,4 +1,4 @@
-.navbar-container{
+.navbar{
     position: fixed;        
     top: 0;
     left: 0;
@@ -6,10 +6,52 @@
     height: 80px;
     background: #fff;          
     color: #030303;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 20px;
+    display: block;
+    padding: 0, 20px;
     z-index: 1000;             
     box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+}
+
+.navbar-container{
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
+    height: 80%;
+}
+
+.navbar-item{
+    display: flex;
+    flex-basis: 30%;
+    flex-grow: 1;
+}
+
+.navbar-item-center, .navbar-item-right{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.navbar-item-right-link-container{
+    width: 25%;
+    display: flex;
+    color: #030303;
+    justify-content: space-between;
+}
+
+.navbar-item-right-link {
+    color: #030303; 
+    position: relative;
+}
+
+.navbar-item-right-link.active::after  {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 3px;
+  background-color: #031ae6;
+  border-radius: 2px; 
 }
