--- a/frontend/src/components/navbar.css
+++ b/frontend/src/components/navbar.css
@@ -34,7 +34,7 @@
 }
 
 .navbar-item-right-link-container{
-    width: 25%;
+    width: 120px;
     display: flex;
     color: #030303;
     justify-content: space-between;
