--- a/frontend/src/pages/query_page.css
+++ b/frontend/src/pages/query_page.css
@@ -11,7 +11,16 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    margin-top: 50px;
+    overflow-y: auto;
+    padding-bottom: 110px;
+}
+
+.Query_form{
+    height: 110px;
+    border-top: 1px solid #ddd;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .loader{
