--- a/frontend/src/pages/query_page.css
+++ b/frontend/src/pages/query_page.css
@@ -9,6 +9,7 @@
 .Response_Handler{
     flex: 1;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     overflow-y: auto;
